# poorly

./: .gitignore  Cargo.toml  openapi.yaml
diagrams/: class_diagram.pulm
proto/: database.proto
src/: grpc.rs  rest.rs
src/core/: mod.rs  types.rs
src/core/database/: mod.rs  tests.rs
src/core/engine/: mod.rs  poorly.rs
src/core/schema/: mod.rs  tests.rs
src/core/table/: mod.rs  tests.rs
static/: index.html
uml/: class_diagram.pulm  usecase_diagram.puml
