[package]
name = "poorly"
version = "0.1.0"
edition = "2021"

[[bin]]
# poorly server
path = "src/bin/server.rs"
name = "poorly-server"

[[bin]]
# poorly cli
path = "src/bin/client.rs"
name = "poorly"

[dependencies]
thiserror = "1.0"
log = "0.4"
env_logger = "0.10"
once_cell = "1.15"
clap = { version = "4.4.3", features = ["derive"] }

rusqlite = { version = "0.28", features = ["bundled", "column_decltype"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

tokio = { version = "1.24", features = ["rt-multi-thread", "signal"] }
warp = "0.3"
tonic = "0.8"
prost = "0.11"

rustyline = "10.0"
rustyline-derive = "0.7"
colored = "2.0"
prettytable-rs = "0.10"

[dev-dependencies]
tempfile = "3.3"

[build-dependencies]
tonic-build = "0.8"
